# UDP_TCP

./: .gitignore  README.md
final_version/withOpenSSL_server/: server.crt  server.key
tcp/: client  client.cpp  server  server.cpp
tcp/client/: client.cpp  mainwindow.cpp
tcp/server/: mainwindow.cpp  server.cpp  server.h
tcp/test/: tclient.cpp  tserver.cpp
tcp_noOpenSSL/client/: CMakeLists.txt  client.h  mainwindow.cpp  mainwindow.h
tcp_noOpenSSL/server/: CMakeLists.txt  mainwindow.cpp
tcp_withOpenSSL/client/: CMakeLists.txt  client.cpp  client.h  mainwindow.cpp  message_crypto.c  newsbot.py
tcp_withOpenSSL/server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  message_crypto.h  server.cpp  server.h
test_tcp/: tclient  tserver
udp/: client  client.cpp  server  server.cpp
udp/src/: client  client.cpp  server  server.cpp
